nextcloud/nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nextcloud
  namespace: nextcloud

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nextcloud

  template:
    metadata:
      labels:
        app: nextcloud

    spec:
      containers:
        - name: nextcloud
          image: nextcloud:latest

          ports:
            - containerPort: 80

          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/www/html

      volumes:
        - name: nextcloud-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
