nextcloud/nextcloud-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nextcloud
  namespace: nextcloud

spec:
  type: ClusterIP

  selector:
    app: nextcloud

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
