nextcloud/nextcloud-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: nextcloud
  namespace: nextcloud

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`cloud.domain.com`) # config it as your domain ...
      kind: Rule

      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: cloud-tls
